name:                day17
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/meck/day17#readme
license:             BSD3
author:              Johan Eklund
maintainer:          johan@meck.se
copyright:           Johan Eklund
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day17
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
